--- a/Uranium/Uranium.vcxproj
+++ b/Uranium/Uranium.vcxproj
@@ -120,15 +120,17 @@
     <ClInclude Include="src\Core\Application\Application.h" />
     <ClInclude Include="src\Core\Application\ApplicationProgram.h" />
     <ClInclude Include="src\Core\Application\UraniumApi.h" />
+    <ClInclude Include="src\Core\DataStructures\GraphWeight.h" />
     <ClInclude Include="src\Core\DataStructures\Container.h" />
     <ClInclude Include="src\Core\DataStructures\DenseGraph.h" />
     <ClInclude Include="src\Core\DataStructures\Entry.h" />
-    <ClInclude Include="src\Core\DataStructures\interfaces\Map.h" />
-    <ClInclude Include="src\Core\DataStructures\interfaces\Queue.h" />
-    <ClInclude Include="src\Core\DataStructures\interfaces\Set.h" />
-    <ClInclude Include="src\Core\DataStructures\interfaces\Vector.h" />
+    <ClInclude Include="src\Core\DataStructures\Map.h" />
+    <ClInclude Include="src\Core\DataStructures\Queue.h" />
+    <ClInclude Include="src\Core\DataStructures\Set.h" />
+    <ClInclude Include="src\Core\DataStructures\Vector.h" />
     <ClInclude Include="src\Core\DataStructures\SparseGraph.h" />
     <ClInclude Include="src\Core\DataStructures\WeightedGraph.h" />
+    <ClInclude Include="src\Core\DataStructures\WeightedSparseGraph.h" />
     <ClInclude Include="src\Core\Math\Constants.h" />
     <ClInclude Include="src\Core\Math\mat2.h" />
     <ClInclude Include="src\Core\Math\mat3.h" />
