hash table implementation

--- a/Uranium/Uranium.vcxproj
+++ b/Uranium/Uranium.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="src\Graphics\Display\Monitor.cpp" />
     <ClCompile Include="src\Graphics\Display\Window.cpp" />
     <ClCompile Include="src\Graphics\Display\WindowProps.cpp" />
+    <ClCompile Include="src\Graphics\Meshes\Model.cpp" />
     <ClCompile Include="src\Graphics\UI\Cursor.cpp" />
     <ClCompile Include="src\Graphics\UI\CursorShape.cpp" />
     <ClCompile Include="src\Input\Callbacks\CursorCallback.cpp" />
@@ -120,17 +121,13 @@
     <ClInclude Include="src\Core\Application\Application.h" />
     <ClInclude Include="src\Core\Application\ApplicationProgram.h" />
     <ClInclude Include="src\Core\Application\UraniumApi.h" />
-    <ClInclude Include="src\Core\DataStructures\GraphWeight.h" />
-    <ClInclude Include="src\Core\DataStructures\Container.h" />
-    <ClInclude Include="src\Core\DataStructures\DenseGraph.h" />
-    <ClInclude Include="src\Core\DataStructures\Entry.h" />
-    <ClInclude Include="src\Core\DataStructures\Map.h" />
-    <ClInclude Include="src\Core\DataStructures\Queue.h" />
-    <ClInclude Include="src\Core\DataStructures\Set.h" />
-    <ClInclude Include="src\Core\DataStructures\Vector.h" />
-    <ClInclude Include="src\Core\DataStructures\SparseGraph.h" />
-    <ClInclude Include="src\Core\DataStructures\WeightedGraph.h" />
-    <ClInclude Include="src\Core\DataStructures\WeightedSparseGraph.h" />
+    <ClInclude Include="src\DataStructures\Containers\Comparable.h" />
+    <ClInclude Include="src\DataStructures\Containers\GraphWeight.h" />
+    <ClInclude Include="src\DataStructures\Containers\Container.h" />
+    <ClInclude Include="src\DataStructures\Containers\Entry.h" />
+    <ClInclude Include="src\DataStructures\Graphs\SparseGraph.h" />
+    <ClInclude Include="src\DataStructures\Graphs\WeightedGraph.h" />
+    <ClInclude Include="src\DataStructures\Graphs\WeightedSparseGraph.h" />
     <ClInclude Include="src\Core\Math\Constants.h" />
     <ClInclude Include="src\Core\Math\mat2.h" />
     <ClInclude Include="src\Core\Math\mat3.h" />
@@ -139,12 +136,17 @@
     <ClInclude Include="src\Core\Math\vec2.h" />
     <ClInclude Include="src\Core\Math\vec3.h" />
     <ClInclude Include="src\Core\Math\vec4.h" />
-    <ClInclude Include="src\Core\DataStructures\ArrayList.h" />
-    <ClInclude Include="src\Core\DataStructures\Graph.h" />
-    <ClInclude Include="src\Core\DataStructures\List.h" />
+    <ClInclude Include="src\DataStructures\HashTables\HashCode.h" />
+    <ClInclude Include="src\DataStructures\HashTables\HashTable.h" />
+    <ClInclude Include="src\DataStructures\HashTables\HashTableOpenAddress.h" />
+    <ClInclude Include="src\DataStructures\Lists\ArrayList.h" />
+    <ClInclude Include="src\DataStructures\Graphs\Graph.h" />
+    <ClInclude Include="src\DataStructures\Lists\List.h" />
     <ClInclude Include="src\Graphics\Display\Monitor.h" />
     <ClInclude Include="src\Graphics\Display\Window.h" />
     <ClInclude Include="src\Graphics\Display\WindowProps.h" />
+    <ClInclude Include="src\DataStructures\Graphs\MeshGraph.h" />
+    <ClInclude Include="src\Graphics\Meshes\Model.h" />
     <ClInclude Include="src\Graphics\UI\Cursor.h" />
     <ClInclude Include="src\Graphics\UI\CursorShape.h" />
     <ClInclude Include="src\Input\Callbacks\CursorCallback.h" />
