--- a/Uranium/Uranium.vcxproj
+++ b/Uranium/Uranium.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="src\Graphics\Display\WindowProps.cpp" />
     <ClCompile Include="src\Graphics\Meshes\Model.cpp" />
     <ClCompile Include="src\Graphics\Shaders\Shader.cpp" />
+    <ClCompile Include="src\Graphics\Shaders\ShaderProgram.cpp" />
     <ClCompile Include="src\Graphics\UI\Cursor.cpp" />
     <ClCompile Include="src\Graphics\UI\CursorShape.cpp" />
     <ClCompile Include="src\Input\Callbacks\CursorCallback.cpp" />
@@ -164,10 +165,12 @@
     <ClInclude Include="src\Graphics\Display\Window.h" />
     <ClInclude Include="src\Graphics\Display\WindowProps.h" />
     <ClInclude Include="src\DataStructures\Graphs\MeshGraph.h" />
+    <ClInclude Include="src\Graphics\Materials\Material.h" />
     <ClInclude Include="src\Graphics\Meshes\Model.h" />
     <ClInclude Include="src\Graphics\Renderer\Renderer.h" />
     <ClInclude Include="src\Graphics\Shaders\Shader.h" />
     <ClInclude Include="src\Graphics\Shaders\ShaderProgram.h" />
+    <ClInclude Include="src\Graphics\Shaders\Uniform.h" />
     <ClInclude Include="src\Graphics\UI\Cursor.h" />
     <ClInclude Include="src\Graphics\UI\CursorShape.h" />
     <ClInclude Include="src\Input\Callbacks\CursorCallback.h" />
