--- a/Uranium/Uranium.vcxproj
+++ b/Uranium/Uranium.vcxproj
@@ -105,14 +105,20 @@
     <ClCompile Include="src\Graphics\Display\Window.cpp" />
     <ClCompile Include="src\Graphics\Display\WindowProps.cpp" />
     <ClCompile Include="src\Graphics\Meshes\Model.cpp" />
+    <ClCompile Include="src\Graphics\Meshes\RigidBody.cpp" />
+    <ClCompile Include="src\Graphics\Renderer\ModelRenderer.cpp" />
+    <ClCompile Include="src\Graphics\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Graphics\Shaders\Shader.cpp" />
+    <ClCompile Include="src\Graphics\Shaders\ShaderMaterial.cpp" />
     <ClCompile Include="src\Graphics\Shaders\ShaderProgram.cpp" />
+    <ClCompile Include="src\Graphics\Shaders\UnifromFactory.cpp" />
     <ClCompile Include="src\Graphics\UI\Cursor.cpp" />
     <ClCompile Include="src\Graphics\UI\CursorShape.cpp" />
     <ClCompile Include="src\Input\Callbacks\CursorCallback.cpp" />
     <ClCompile Include="src\Input\Callbacks\KeyboardCallback.cpp" />
     <ClCompile Include="src\Input\Callbacks\WindowCallback.cpp" />
     <ClCompile Include="src\Input\Callbacks\MouseCallback.cpp" />
+    <ClCompile Include="src\Scenes\Objects\Entity.cpp" />
     <ClCompile Include="src\Scenes\Scene.cpp" />
     <ClCompile Include="src\Scenes\SceneMaster.cpp" />
     <ClCompile Include="src\STL_pch.cpp">
@@ -165,13 +171,20 @@
     <ClInclude Include="src\Graphics\Display\Window.h" />
     <ClInclude Include="src\Graphics\Display\WindowProps.h" />
     <ClInclude Include="src\DataStructures\Graphs\MeshGraph.h" />
+    <ClInclude Include="src\Graphics\Materials\Assets.h" />
     <ClInclude Include="src\Graphics\Materials\Material.h" />
     <ClInclude Include="src\Graphics\Meshes\Model.h" />
+    <ClInclude Include="src\Graphics\Meshes\ModelCollection.h" />
+    <ClInclude Include="src\Graphics\Meshes\RigidBody.h" />
+    <ClInclude Include="src\Graphics\Renderer\ModelRenderer.h" />
+    <ClInclude Include="src\Graphics\Renderer\Renderable.h" />
     <ClInclude Include="src\Graphics\Renderer\Renderer.h" />
     <ClInclude Include="src\Graphics\Shaders\Shader.h" />
+    <ClInclude Include="src\Graphics\Shaders\ShaderMaterial.h" />
     <ClInclude Include="src\Graphics\Shaders\ShaderProgram.h" />
     <ClInclude Include="src\Graphics\Shaders\ShaderTypes.h" />
     <ClInclude Include="src\Graphics\Shaders\Uniform.h" />
+    <ClInclude Include="src\Graphics\Shaders\UniformFactory.h" />
     <ClInclude Include="src\Graphics\UI\Cursor.h" />
     <ClInclude Include="src\Graphics\UI\CursorShape.h" />
     <ClInclude Include="src\Input\Callbacks\CursorCallback.h" />
@@ -181,6 +194,7 @@
     <ClInclude Include="src\Input\Callbacks\WindowCallback.h" />
     <ClInclude Include="src\Scenes\Cameras\Camera.h" />
     <ClInclude Include="src\Scenes\Cameras\FPCamera.h" />
+    <ClInclude Include="src\Scenes\Objects\Entity.h" />
     <ClInclude Include="src\Scenes\Scene.h" />
     <ClInclude Include="src\Scenes\SceneMaster.h" />
     <ClInclude Include="src\STL_pch.h" />
