--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -110,6 +110,9 @@
     <None Include="src\testF.glsl" />
     <None Include="src\testV.glsl" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Cube.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
